--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # ADD HTTP (hidden method) PUT, PATCH, DELETE
 spring.mvc.hiddenmethod.filter.enabled=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 server.port=8080
 #logging.level.org.springframework=debug
 #logging.level.org.hibernate=debug
